package controller;

public class LocationController {
}
