package dto;

public class ActivityDTO {
}
