package model;

public class GroupMeetRequest {
}
