package model;

public class MeetRequest {
}
