package model;

public class Preferences {
}
