package model.enums;

public class ActivityType {
}
