package model.enums;

public class NotificationType {
}
