package model.enums;

public class RequestStatus {
}
