package model.enums;

public class TransportationMethod {
}
