package repository;

public class ActivityRepository {
}
