package repository;

public class GroupMeetRequestRepository {
}
