package repository;

public class LocationRepository {
}
