package repository;

public class MeetRequestRepository {
}
