package repository;

public class NotificationRepository {
}
