package repository;

public class PreferencesRepository {
}
