package service;

public class GroupMeetRequestService {
}
