package service;

public class LocationService {
}
