package service;

public class PreferenceService {
}
